[package]
name = "moe-counter-rs"
version = "0.1.0"
author = "Yurzi <yurzi@foxmail.com>"
edition = "2021"

[dependencies]
axum = "0.7.7"
base64 = "0.22.1"
clap = { version = "4.5.18", features = ["derive"] }
confy = "0.6.1"
image = "0.25.2"
resvg = "0.43.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing-subscriber = "0.3.18"
